Fixed font-size on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ body {
   color: white;
   text-shadow: 0px 3px 5px #2a292e;
   font-weight: bold;
-  font-size: 1.60em; }
+  font-size: 1.25em; }
 .input #input-hours {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
